html/bio updates

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                                         over 20 years ago. I graduated college from UNCC. I am a sports fan of the
                                         Lakers,
                                         Eagles, and Phillies.</p>
-                                    <p>Thank you for taking the time to visit my portfoilio, here you will find infomation about me as
+                                    <p>Thank you for taking the time to visit my portfolio, here you will find infomation about me as
                                         well as
                                         my current portfoilio of projects and a few contact pages for you to reach me.  Please feel free to reach out.  I look forward to hearing from you soon!</p>
                                 </div>
