bio text update

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                                 </div>
                                 <div class="aboutMeP">
                                     <p>My Name is Steven Balerna. I have been married for over two years to my beautiful
-                                        wife, Shakira and I have a daughter, Sienna, who is a little over four months
+                                        wife, Shakira and I have a daughter, Sienna, who is a little over six months
                                         old.
                                         In my spare time I enjoy haning out with my family and traveling. I have
                                         recently
