updates to cards

--- a/index.html
+++ b/index.html
@@ -44,14 +44,14 @@
                                 <div class="aboutMeP">
                                     <p>My Name is Steven Balerna. I have
                                         recently
-                                        started UNCC Coding Boot Camp. I also graduated college from UNCC.</p>
+                                        started UNCC Coding Boot Camp. I also graduated college from UNCC.  We just completed our second group project.</p>
                                     <p>I would like to thank you for taking the time to visit my portfolio, here you
                                         will find infomation about me as
                                         well as
                                         my current portfoilio of projects and a few contact pages for you to reach me.
                                         Please feel free to reach out. I look forward to hearing from you soon!</p>
                                     <p>I have been married for over two years to my beautiful
-                                        wife, Shakira and I have a daughter, Sienna, who is a little over six months
+                                        wife, Shakira and I have a daughter, Sienna, who is a little over eight months
                                         old.
                                         In my spare time I enjoy haning out with my family and traveling. I am a sports
                                         fan of the
@@ -86,13 +86,85 @@
                     <div class="col-lg-3">
                         <div class="card">
                             <div class="card-header text-center customPortCard">
+                                <strong>Fantasy Draft Helper</strong>
+                            </div>
+                            <div class="card-body">
+                                <blockquote class="blockquote mb-0 text-center">
+                                    <h3 class="text-center" id="fantasydraft-helper"></h3>
+                                    <a href="https://project2-unccbootcamp.herokuapp.com/QB"><img
+                                            src="assets/images/fantasydraft-helper.png" class="screenshot" alt="fantasydraft-helper" /></a>
+                                </blockquote>
+                            </div>
+                        </div>
+                    </div>
+
+
+                    <div class="col-lg-3">
+                        <div class="card">
+                            <div class="card-header text-center customPortCard">
+                                <strong>NBA Friend Finder</strong>
+                            </div>
+                            <div class="card-body">
+                                <blockquote class="blockquote mb-0 text-center">
+                                    <h3 class="text-center" id="nba-friendfinder"></h3>
+                                    <a href="https://gentle-savannah-93858.herokuapp.com/"><img
+                                            src="assets/images/nba-friendfinder.png" class="screenshot" alt="nba-friendfinder" /></a>
+                                </blockquote>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-lg-3">
+                        <div class="card">
+                            <div class="card-header text-center customPortCard">
                                 <strong>CityScope</strong>
                             </div>
                             <div class="card-body">
                                 <blockquote class="blockquote mb-0 text-center">
                                     <h3 class="text-center" id="cityScope"></h3>
                                     <a href="https://stevenbalerna.github.io/project1/"><img
-                                            src="assets/images/cityscope.png" class="screenshot" alt="CityScope" /></a>
+                                            src="assets/images/cityscope.png" class="screenshot"
+                                            alt="CityScope" /></a>
+                                </blockquote>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-lg-3">
+                        <div class="card">
+                            <div class="card-header text-center customPortCard">
+                                <strong>Bamazon</strong>
+                            </div>
+                            <div class="card-body">
+                                <blockquote class="blockquote mb-0 text-center">
+                                    <h3 class="text-center" id="bamazon"></h3>
+                                    <a href="https://github.com/stevenbalerna/bamazon"><img
+                                            src="assets/images/bamazon.png" class="screenshot"
+                                            alt="Bamazon" /></a>
+                                </blockquote>
+                            </div>
+                        </div>
+                    </div>
+
+                    
+                    
+                </div>
+            </div>
+        </div>
+
+        <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionExample">
+            <div class="card-body">
+                <div class="row justify-content-lg-center">
+                    <div class="col-lg-3">
+                        <div class="card">
+                            <div class="card-header text-center customPortCard">
+                                <strong>Train Scheduler</strong>
+                            </div>
+                            <div class="card-body">
+                                <blockquote class="blockquote mb-0 text-center">
+                                    <h3 class="text-center" id="Train-Scheduler"></h3>
+                                    <a href="https://stevenbalerna.github.io/train-activity/"><img
+                                            src="assets/images/train-app.png" class="screenshot" alt="Train-Scheduler" /></a>
                                 </blockquote>
                             </div>
                         </div>
